tests/functional2/lang/attrs/parse-fail-duplicate-3.err.exp
error: attribute 'x' already defined at /pwd/in.nix:9:5
       at /pwd/in.nix:10:18:
            9|     x = 789;
           10|     inherit (as) x;
             |                  ^
           11|   };
